--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -4,6 +4,7 @@
   border-radius: 16px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   margin: 20px auto;
+  margin-bottom: 90px;
   max-width: 600px;
 }
 .input-group.mb-3 {
