--- a/src/Results.css
+++ b/src/Results.css
@@ -1,14 +1,17 @@
 .Results {
   margin: 10px 10px;
 }
-
+.Word {
+  font-size: 70px;
+}
 .Primary {
-  background: white;
-  padding: 40px;
-  border-radius: 16px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding: 30px;
+  font-size: 20px;
+  border-radius: 10px;
   margin: 20px auto;
-  max-width: 300px;
+  max-width: 400px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 @media (max-width: 765px) {
