--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 .App {
   text-align: center;
   margin: 0 auto;
-  margin-top: 50px;
+  margin-top: 10px;
   max-width: 1000px;
+}
+
+img {
+  max-width: 400px;
+  margin: 10px auto;
 }
 .input-group {
   max-width: 500px;
@@ -11,4 +16,7 @@
 footer {
   font-size: 10px;
   margin-top: 50px;
+}
+h1 {
+  display: none;
 }
